update:     login views     colors in views

--- a/ProjectQuảnLýMượnPhòngHọc/DsMuonPhongHoc/style.css
+++ b/ProjectQuảnLýMượnPhòngHọc/DsMuonPhongHoc/style.css
@@ -11,13 +11,13 @@
     font-family: 'Poppins', sans-serif;
 }
 :root {
-    --bg-color: #dccc9a;
+    --bg-color: #f1dc9c;
     --second-bg-color: #fcf0cf; 
     --text-color: #71706E;
     --text-border-color: #FFB6C1;
-    --main-color: #ffc8d1;
-    --main-box-color: black;
-    --content-box-color: #e7dbb7;
+    --main-color: rgb(245, 231, 191);
+    --main-box-color: rgba(0, 0, 0, .7);
+    --content-box-color: #b9b4a3;
     --admin-menu-color: #e9b4b4;
     --manager-menu-color: #ffda72;
     --regular-menu-color: #78c5c5;
@@ -44,85 +44,90 @@ nav {
     padding: .5rem 2rem;
     gap: 2rem;
     overflow: hidden;
-}
-nav a {
-    font-weight: 500;
-    color: var(--text-color);
-}
-nav a.add-object {
-    text-align: end;
-}
-nav h2 {
-    cursor: default;
-}
-nav form.filter {
-    position: relative;
-    flex-basis: 100rem;
-    width: 100%;
-    height: auto;
-    display: flex;
-    border: 2px solid #162938;
-    border-radius: .7rem;
-    gap: 1rem;
-    overflow: hidden;
-}
-nav form.filter input {
-    flex-grow: 10;
-    min-width: 2rem;
-    height: 100%;
-    background: transparent;
-    border: none;
-    outline: none;
-    font-size: 1em;
-    font-weight: 500;
-    color: #162938;
-    padding:  1rem;
-}
-nav form.filter input::placeholder {
-    color: black;
-}
-nav form.filter select {
-    border-left: 2px solid #162938;
-    border-right: 2px solid #162938;
-    cursor: pointer;
-    transition: .1s;
-}
-nav form.filter select:hover {
-    background-color: var(--main-color);
-    border-radius: 1rem;
-}
-nav form.filter button {
-    width: 4rem;
-    border-left: 2px solid #162938;
-    cursor: pointer;
-    transition: .1s;
-}
-nav form.filter button:hover {
-    width: 5rem;
-    background-color: var(--main-color);
-    border-top-left-radius: 1rem;
-    border-bottom-left-radius: 1rem;
+
+    a {
+        font-weight: 500;
+        color: var(--text-color);
+    }
+    a.add-object {
+        text-align: end;
+    }
+    h2 {
+        cursor: default;
+    }
+    form {
+        position: relative;
+        flex-basis: 100rem;
+        width: 100%;
+        height: auto;
+        display: flex;
+        border: 2px solid #162938;
+        border-radius: .7rem;
+        gap: 1rem;
+        overflow: hidden;
+
+        input {
+            flex-grow: 10;
+            min-width: 2rem;
+            height: 100%;
+            background: transparent;
+            border: none;
+            outline: none;
+            font-size: 1em;
+            font-weight: 500;
+            color: #162938;
+            padding:  1rem;
+        }
+        input::placeholder {
+            color: black;
+        }
+        select {
+            border-left: 2px solid #162938;
+            border-right: 2px solid #162938;
+            cursor: pointer;
+            transition: .1s;
+        }
+        select:hover {
+            background-color: var(--main-color);
+            border-radius: 1rem;
+        }
+        button {
+            width: 4rem;
+            border-left: 2px solid #162938;
+            cursor: pointer;
+            transition: .1s;
+        }
+        button:hover {
+            width: 5rem;
+            background-color: var(--main-color);
+            border-top-left-radius: 1rem;
+            border-bottom-left-radius: 1rem;
+        }
+    }
 }
 /* boardContent design */
-table tr.hidden {
-    display: none;
-}
-table tr th {
-    background: var(--content-box-color);
-    cursor: default;
-}
-table tbody tr{
-    cursor: pointer;
-    transition: .1s;
-}
-table tbody tr:hover{
-    background-color: var(--content-box-color);
-}
-table tr td.MaBuoiHoc,
-table tr td.MaDoiBuoiHoc,
-table tr td.LopGiangDay {
-    overflow-wrap: anywhere;
-}
+
+table {
+    tr th {
+        background: var(--main-color);
+        cursor: default;
+    }
+    tbody tr{
+        cursor: pointer;
+        transition: .1s;
+    }
+    tbody tr.hidden {
+        display: none;
+    }
+    tbody tr:hover{
+        background-color: var(--main-color);
+    }
+    tr td.MaBuoiHoc,
+    tr td.MaDoiBuoiHoc,
+    tr td.LopGiangDay {
+        overflow-wrap: anywhere;
+    }
+} 
 @media only screen and ( width <= 768px) {/* Small devices (portrait tablets and large phones, 600px and up to 768px) */
     /* media boardBar design */
     nav a {
