--- a/ProjectQuảnLýMượnPhòngHọc/DsGiangVien/style.css
+++ b/ProjectQuảnLýMượnPhòngHọc/DsGiangVien/style.css
@@ -11,13 +11,13 @@
     font-family: 'Poppins', sans-serif;
 }
 :root {
-    --bg-color: #dccc9a;
+    --bg-color: #f1dc9c;
     --second-bg-color: #fcf0cf; 
     --text-color: #71706E;
     --text-border-color: #FFB6C1;
-    --main-color: #ffc8d1;
-    --main-box-color: black;
-    --content-box-color: #e7dbb7;
+    --main-color: #f3e0a7;
+    --main-box-color: rgba(0, 0, 0, .7);
+    --content-box-color: #b9b4a3;
     --admin-menu-color: #e9b4b4;
     --manager-menu-color: #ffda72;
     --regular-menu-color: #78c5c5;
@@ -108,7 +108,7 @@ table tr.hidden {
     display: none;
 }
 table tr th {
-    background: var(--content-box-color);
+    background: var(--main-color);
     cursor: default;
 }
 table tbody tr{
@@ -116,7 +116,7 @@ table tbody tr{
     transition: .1s;
 }
 table tbody tr:hover{
-    background-color: var(--content-box-color);
+    background-color: var(--main-color);
 }
 table tr td.MaGiangVien,
 table tr td.Email {
