--- a/ProjectQuảnLýMượnPhòngHọc/DsLopHoc/style.css
+++ b/ProjectQuảnLýMượnPhòngHọc/DsLopHoc/style.css
@@ -11,13 +11,13 @@
     font-family: 'Poppins', sans-serif;
 }
 :root {
-    --bg-color: #dccc9a;
+    --bg-color: #f1dc9c;
     --second-bg-color: #fcf0cf; 
     --text-color: #71706E;
     --text-border-color: #FFB6C1;
-    --main-color: #ffc8d1;
-    --main-box-color: black;
-    --content-box-color: #e7dbb7;
+    --main-color: rgb(245, 231, 191);
+    --main-box-color: rgba(0, 0, 0, .7);
+    --content-box-color: #b9b4a3;
     --admin-menu-color: #e9b4b4;
     --manager-menu-color: #ffda72;
     --regular-menu-color: #78c5c5;
@@ -40,7 +40,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 1px 1px 2px black;
+    box-shadow: 1px 1px 2px var(--main-box-color);
     padding: .5rem 2rem;
     gap: 2rem;
     overflow: hidden;
@@ -82,8 +82,8 @@ nav {
             color: black;
         }
         select {
-            border-left: 2px solid #162938;
-            border-right: 2px solid #162938;
+            border-left: 2px solid var(--main-box-color);
+            border-right: 2px solid var(--main-box-color);
             cursor: pointer;
             transition: .1s; 
         }
@@ -93,7 +93,7 @@ nav {
         }
         button {
             width: 4rem;
-            border-left: 2px solid #162938;
+            border-left: 2px solid var(--main-box-color);
             cursor: pointer;
             transition: .1s;
         }
@@ -111,7 +111,7 @@ main {
         width: 100%;
 
         th {
-            background: var(--content-box-color);
+            background: var(--main-color);
             cursor: default;
         }
         tbody tr{
@@ -119,7 +119,7 @@ main {
             transition: .1s;
         }
         tbody tr:hover{
-            background-color: var(--content-box-color);
+            background-color: var(--main-color);
         }
         tbody tr.hidden {
             display: none;
@@ -148,14 +148,14 @@ main {
         
         table {
             thead th {
-                border: .3rem solid black;
+                border: .3rem solid var(--main-box-color);
                 border-radius: 1rem;
                 font-size: 1.7rem;
             }
             tbody td {
                 text-align: center;
-                border-right: .2rem solid black;
-                border-bottom: .2rem solid black;
+                border-right: .2rem solid var(--main-box-color);
+                border-bottom: .2rem solid var(--main-box-color);
                 font-size: 1.5rem;
             }
             tbody td:last-child {
@@ -188,19 +188,19 @@ main {
 
         table {
             padding: .5rem 0;
-            border: .3rem solid black;
+            border: .3rem solid var(--main-box-color);
             border-radius: 1rem;
             overflow: hidden;
             
             thead th {
-                border: .2rem solid black;
+                border: .2rem solid var(--main-box-color);
                 border-radius: .4rem;
                 font-size: 2.1rem;
             }
             tbody td {
                 text-align: center;
-                border-right: .2rem solid black;
-                border-bottom: .2rem solid black;
+                border-right: .2rem solid var(--main-box-color);
+                border-bottom: .2rem solid var(--main-box-color);
                 font-size: 2rem;
             }
         }
