--- a/ProjectQuảnLýMượnPhòngHọc/Login/style.css
+++ b/ProjectQuảnLýMượnPhòngHọc/Login/style.css
@@ -69,54 +69,98 @@ main {
     gap: 1.5rem;
     overflow: hidden;
 
-    menu {
-        max-width: 30%;
-        height: 100%;
-        background: var(--bg-color);
-        display: flex;
-        flex-direction: column;
-        border: .2rem solid var(--main-box-color);
-        border-radius: 2rem;
-        box-shadow: 1px 1px 2px black;
-        padding: 1.5rem;
+    .wrapper {
+        position: relative;
+        width: 400px;
+        height: 410px;
+        background: transparent;
+        border: 2px solid rgba(255, 255, 255, .5);
+        border-radius: 20px;
+        backdrop-filter: blur(20px);
+        box-shadow: 0 0 30px rgba(0, 0, 0, .5);
+        display: block;
+        justify-content: center;
+        align-items: center;
         overflow: hidden;
-
-        li {
-            display: flex;
-            margin: .5rem;
-            border: .5rem solid var(--content-box-color);
-            border-radius: 2rem;
-            justify-content: center;
-        }
-        a {
-            margin: 1.5rem;
-            font-weight: 500;
-            color: var(--text-color);
-            text-align: center;
-        }
-        li.menu-home {
-            border: none;
-        }
-        li.menu-home a {
-            font-weight: 700;
-        }
-        li.menu-admin {
-            background: var(--admin-menu-color);
-        }
-        li.menu-manager {
-            background: var(--manager-menu-color);
-        }
-        li.menu-regular {
-            background: var(--regular-menu-color);
-        }
     }
-    iframe {
-        flex-grow: 1;
+
+    .wrapper .form-box {
+        width: 100%;
+        padding: 40px;
+    }
+
+    .wrapper .form-box.login {
+        position: absolute;
+        transform: translateX(0);
+        transition: transform .18s ease;
+    }
+
+    .form-box h2 {
+        font-size: 4em;
+        color: #162938;
+        text-align: center;
+    }
+    .form-box h3 {
+        font-size: 2em;
+        color: #2b475d;
+        text-align: center;
+    }
+
+    .input-box {
+        position: relative;
+        width: 100%;
+        height: 50px;
+        border-bottom: 2px solid #162938;
+        margin: 30px 0;
+    }
+
+    .input-box label {
+        position: absolute;
+        top: 50%;
+        left: 5px;
+        transform: translateY(-50%);
+        font-size: 1em;
+        color: #162938;
+        font-weight: 500;
+        pointer-events: none;
+        transition: .5s;
+    }
+    .input-box input {
+        width: 100%;
         height: 100%;
-        background: var(--bg-color);
-        border: .3rem solid var(--main-box-color);
-        border-radius: 2rem;
-        box-shadow: 1px 1px 2px var(--main-box-color);
+        background: transparent;
+        border: none;
+        outline: none;
+        font-size: 1em;
+        font-weight: 600;
+        color: #162938;
+        padding: 0 35px 0 5px;
+    }
+
+    .input-box input:focus~label,
+    .input-box input:valid~label {
+        top: -5px;
+    }
+
+    .input-box .icon {
+        position: absolute;
+        right: 8px;
+        font-size: 2.5rem;
+        color: #162938;
+        line-height: 57px;
+    }
+
+    .btn {
+        width: 100%;
+        height: 45px;
+        background: #162938;
+        border: none;
+        border-radius: 6px;
+        outline: none;
+        cursor: pointer;
+        font-size: 1em;
+        font-weight: 500;
+        color: #fff; 
     }
 }
 footer {
