--- a/ProjectQuảnLýMượnPhòngHọc/ErrorHandling/style.css
+++ b/ProjectQuảnLýMượnPhòngHọc/ErrorHandling/style.css
@@ -12,7 +12,7 @@
     --bg-color: #1E90FF;
     --second-bg-color: #20B2AA; 
     --text-color: #fffbd3;
-    --text-border-color: #FFB6C1;
+    --text-box-color: #fcdec9;
     --main-color: #FFB6C1;
     --main-box-color: black;
     --content-box-color: #fc913a;
