--- a/ProjectQuảnLýMượnPhòngHọc/DsGiangVien/style.css
+++ b/ProjectQuảnLýMượnPhòngHọc/DsGiangVien/style.css
@@ -14,7 +14,7 @@
     --bg-color: #f1dc9c;
     --second-bg-color: #fcf0cf; 
     --text-color: #71706E;
-    --text-border-color: #FFB6C1;
+    --text-box-color: #fcdec9;
     --main-color: #f3e0a7;
     --main-box-color: rgba(0, 0, 0, .7);
     --content-box-color: #b9b4a3;
@@ -88,7 +88,7 @@ nav form.filter select {
     transition: .1s;
 }
 nav form.filter select:hover {
-    background-color: var(--main-color);
+    background-color: var(--text-box-color);
     border-radius: 1rem;
 }
 nav form.filter button {
@@ -99,7 +99,7 @@ nav form.filter button {
 }
 nav form.filter button:hover {
     width: 5rem;
-    background-color: var(--main-color);
+    background-color: var(--text-box-color);
     border-top-left-radius: 1rem;
     border-bottom-left-radius: 1rem;
 }
