--- a/ProjectQuảnLýMượnPhòngHọc/GioiThieu/style.css
+++ b/ProjectQuảnLýMượnPhòngHọc/GioiThieu/style.css
@@ -12,8 +12,8 @@
     --bg-color: #f1dc9c;
     --second-bg-color: #fcf0cf; 
     --text-color: #71706E;
-    --text-border-color: #FFB6C1;
-    --main-color: rgb(245, 231, 191);
+    --text-box-color: #fcdec9;
+    --main-color: #f3e0a7;
     --main-box-color: rgba(0, 0, 0, .7);
     --content-box-color: #b9b4a3;
     --admin-menu-color: #e9b4b4;
