--- a/ProjectQuảnLýMượnPhòngHọc/DsMuonPhongHoc/style.css
+++ b/ProjectQuảnLýMượnPhòngHọc/DsMuonPhongHoc/style.css
@@ -39,8 +39,9 @@ body {
 }
 /* boardBar design */
 nav {
-    background: var(--bg-color);
+    background-color: var(--bg-color);
     display: flex;
+    flex-shrink: 0;
     justify-content: space-between;
     align-items: center;
     box-shadow: 1px 1px 2px black;
@@ -108,6 +109,15 @@ nav {
         }
         
     }
+}
+nav.menu-manager {
+    background: var(--manager-menu-color);
+}
+nav.menu-regular {
+    background: var(--regular-menu-color);
+}
+nav.menu-admin {
+    background: var(--admin-menu-color);
 }
 /* boardContent design */
 
