--- a/ProjectQuảnLýMượnPhòngHọc/DsGiangVien/style.css
+++ b/ProjectQuảnLýMượnPhòngHọc/DsGiangVien/style.css
@@ -23,7 +23,7 @@
     --content-box-color: #b9b4a3;
     --admin-menu-color: #e9b4b4;
     --manager-menu-color: #ffda72;
-    --regular-menu-color: #78c5c5;
+    --regular-menu-color: #87e9e9;
 }
 html {
     font-size: 62.5%;
@@ -108,6 +108,15 @@ nav {
             border-bottom-left-radius: 1rem;
         }
     }
+}
+nav.menu-manager {
+    background: var(--manager-menu-color);
+}
+nav.menu-regular {
+    background: var(--regular-menu-color);
+}
+nav.menu-admin {
+    background: var(--admin-menu-color);
 }
 /* boardContent design */
 table {
