--- a/ProjectQuảnLýMượnPhòngHọc/HomeManager/style.css
+++ b/ProjectQuảnLýMượnPhòngHọc/HomeManager/style.css
@@ -11,8 +11,8 @@
     font-family: 'Poppins', sans-serif;
 }
 :root {
-    --bg-color: #F5CBA3;
-    --second-bg-color: rgb(255, 241, 226); 
+    --bg-color: #f1dc9c;
+    --second-bg-color: #fcf0cf; 
     --text-color: #71706E;
     --text-box-color: #fcdec9;
     --main-color: #f3e0a7;
@@ -20,7 +20,7 @@
     --content-box-color: #b9b4a3;
     --admin-menu-color: #e9b4b4;
     --manager-menu-color: #ffda72;
-    --regular-menu-color: #78c5c5;
+    --regular-menu-color: #87e9e9;
 }
 html {
     font-size: 62.5%;
