--- a/ProjectQuảnLýMượnPhòngHọc/DsMuonPhongHoc/style.css
+++ b/ProjectQuảnLýMượnPhòngHọc/DsMuonPhongHoc/style.css
@@ -7,11 +7,16 @@
     text-decoration: none;
     border: none;
     outline: none;
+    font-size: 1rem;
     scroll-behavior: smooth;
     font-family: 'Poppins', sans-serif;
 }
 *.hidden {
     display: none;
+}
+html {
+    font-size: 62.5%;
+    overflow-x: hidden;
 }
 :root {
     --bg-color: #f1dc9c;
@@ -24,10 +29,6 @@
     --admin-menu-color: #e9b4b4;
     --manager-menu-color: #ffda72;
     --regular-menu-color: #87e9e9;
-}
-html {
-    font-size: 62.5%;
-    overflow-x: hidden;
 }
 body {
     width: 100%;
@@ -77,7 +78,7 @@ nav {
             background: transparent;
             border: none;
             outline: none;
-            font-size: 1em;
+            font-size: 1rem;
             font-weight: 500;
             color: #162938;
             padding:  1rem;
@@ -120,80 +121,96 @@ nav.menu-admin {
     background: var(--admin-menu-color);
 }
 /* boardContent design */
+main {
+    table {
+        width: 100%;
+        
+        thead th {
+            background: var(--main-color);
+            cursor: default;
+        }
+        tbody {
+            tr{
+                cursor: pointer;
+                transition: .1s;
+            }
+            tr:hover{
+                background-color: var(--main-color);
+            }
+            td.MaBuoiHoc,
+            td.MaDoiBuoiHoc,
+            td.LopGiangDay {
+                overflow-wrap: anywhere;
+            }
+        } 
+    } 
+}
 
-table {
-    tr th {
-        background: var(--main-color);
-        cursor: default;
-    }
-    tbody tr{
-        cursor: pointer;
-        transition: .1s;
-    }
-    tbody tr.hidden {
-        display: none;
-    }
-    tbody tr:hover{
-        background-color: var(--main-color);
-    }
-    tr td.MaBuoiHoc,
-    tr td.MaDoiBuoiHoc,
-    tr td.LopGiangDay {
-        overflow-wrap: anywhere;
-    }
-} 
 @media only screen and ( width <= 768px) {/* Small devices (portrait tablets and large phones, 600px and up to 768px) */
     /* media boardBar design */
-    nav a {
-        font-size: 1.7rem;
-    }
-    nav h2 {
-        font-size: 2rem;
-    }
+    nav {
+        a {
+            font-size: 1rem;
+        }
+        h2 {
+            font-size: 1.3rem;
+        }
+    } 
     /* media boardContent design */
-    table {
-        margin-top: 1rem;
-    }
-    table thead tr th {
-        border: .3rem solid black;
-        border-radius: 1rem;
-        font-size: 1.7rem;
-    }
-    table tbody tr td {
-        text-align: center;
-        border-right: .2rem solid black;
-        border-bottom: .2rem solid black;
-        font-size: 1.5rem;
-    }
-    table tbody tr td:last-child {
-        border-right: none;
+    main {
+        padding-top: 1rem;
+        
+        table {
+            thead th {
+                border: .3rem solid var(--main-box-color);
+                border-radius: 1rem;
+                font-size: 1rem;
+            }
+            tbody {
+                td {
+                    text-align: center;
+                    border-right: .2rem solid var(--main-box-color);
+                    border-bottom: .2rem solid var(--main-box-color);
+                    font-size: .8rem;
+                }
+                td:last-child {
+                    border-right: none;
+                }
+            } 
+        }
     }
 }
 @media only screen and ( 768px < width ) {/* Medium devices (landscape tablets, 768px and up) */
     /* media boardBar design */
-    nav a {
-        font-size: 2rem;
-    }
-    nav h2 {
-        font-size: 2.2rem;
-    }
+    nav {
+        a {
+            font-size: 1.4rem;
+        }
+        h2 {
+            font-size: 1.8rem;
+        }
+    } 
     /* media boardContent design */
-    table {
-        margin: 1.5rem;
-        padding: .5rem 0;
-        border: .3rem solid black;
-        border-radius: 1rem;
-        overflow: hidden;
-    }
-    table tr th {
-        border: .2rem solid black;
-        border-radius: .4rem;
-        font-size: 2.1rem;
-    }
-    table tr td {
-        text-align: center;
-        border-right: .2rem solid black;
-        border-bottom: .2rem solid black;
-        font-size: 2rem;
+    main {
+        padding: 1.5rem .5rem;
+
+        table {
+            padding: .5rem 0;
+            border: .3rem solid var(--main-box-color);
+            border-radius: 1rem;
+            overflow: hidden;
+            
+            thead th {
+                border: .2rem solid var(--main-box-color);
+                border-radius: .4rem;
+                font-size: 1.8rem;
+            }
+            tbody td {
+                text-align: center;
+                border-right: .2rem solid var(--main-box-color);
+                border-bottom: .2rem solid var(--main-box-color);
+                font-size: 1.4rem;
+            }
+        }
     }
 }
