--- a/ProjectQuảnLýMượnPhòngHọc/DsGiangVien/style.css
+++ b/ProjectQuảnLýMượnPhòngHọc/DsGiangVien/style.css
@@ -123,7 +123,7 @@ nav.menu-admin {
 main {
     table {
         width: 100%;
-        
+
         thead th {
             background: var(--main-color);
             cursor: default;
@@ -155,26 +155,29 @@ main {
         }
     }
     /* media boardContent design */
-    table {
-        margin-top: 1rem;
-
-        thead tr th {
-            border: .3rem solid var(--main-box-color);
-            border-radius: 1rem;
-            font-size: 1rem;
+    main {
+        padding-top: 1rem;
+        
+        table {
+            thead tr th {
+                border: .3rem solid var(--main-box-color);
+                border-radius: 1rem;
+                font-size: 1rem;
+            }
+            tbody {
+                td {
+                    text-align: center;
+                    border-right: .2rem solid var(--main-box-color);
+                    border-bottom: .2rem solid var(--main-box-color);
+                    font-size: .8rem;
+                }
+                td:last-child {
+                    border-right: none;
+                }
+            } 
         }
-        tbody {
-            td {
-                text-align: center;
-                border-right: .2rem solid var(--main-box-color);
-                border-bottom: .2rem solid var(--main-box-color);
-                font-size: .8rem;
-            }
-            td:last-child {
-                border-right: none;
-            }
-        } 
     }
+    
 }
 @media only screen and ( 768px < width ) {/* Medium devices (landscape tablets, 768px and up) */
     /* media boardBar design */
@@ -187,24 +190,27 @@ main {
         }
     } 
     /* media boardContent design */
-    table {
-        margin: 1.5rem;
-        padding: .5rem 0;
-        border: .3rem solid var(--main-box-color);
-        border-radius: 1rem;
-        overflow: hidden;
+    main {
+        padding: 1.5rem .5rem;
 
-        thead th {
-            border: .2rem solid var(--main-box-color);
-            border-radius: .4rem;
-            font-size: 1.8rem;
-        }
+        table {
+            padding: .5rem 0;
+            border: .3rem solid var(--main-box-color);
+            border-radius: 1rem;
+            overflow: hidden;
 
-        tbody td {
-            text-align: center;
-            border-right: .2rem solid var(--main-box-color);
-            border-bottom: .2rem solid var(--main-box-color);
-            font-size: 1.4rem;
+            thead th {
+                border: .2rem solid var(--main-box-color);
+                border-radius: .4rem;
+                font-size: 1.8rem;
+            }
+
+            tbody td {
+                text-align: center;
+                border-right: .2rem solid var(--main-box-color);
+                border-bottom: .2rem solid var(--main-box-color);
+                font-size: 1.4rem;
+            }
         }
     }
 }
